--- a/product/1610.htm
+++ b/product/1610.htm
@@ -1656,27 +1656,19 @@
 			</div>
 			<div class="nav-right a333">
 				<ul>
-					<li><a href="../index.htm" change="http://www. 杨俊林的药业公司.cn/">首页</a></li>
-					<li><a href="http://www. 杨俊林的药业公司.cn/section/index   http://www. 杨俊林的药业公司.cn/section/index "
-							change="http://www. 杨俊林的药业公司.cn/section/index">新特药品</a></li>
-					<li><a href="javascript:;">专科频道</a>
+					<li><a href="../index.htm" >首页</a></li>
+					<li><a href="new/section/new-pro.htm">新特药品</a></li>
+					<li><a href="zhuanke/man.htm">专科频道</a>
 						<ul>
-							<li><a href="http://www. 杨俊林的药业公司.cn/andrology   http://www. 杨俊林的药业公司.cn/andrology "
-									change="http://www. 杨俊林的药业公司.cn/andrology">男科</a></li>
-							<li><a href="http://www. 杨俊林的药业公司.cn/gynaecology   http://www. 杨俊林的药业公司.cn/gynaecology "
-									change="http://www. 杨俊林的药业公司.cn/gynaecology">妇科</a></li>
-							<li><a href="http://www. 杨俊林的药业公司.cn/liver-complaint   http://www. 杨俊林的药业公司.cn/liver-complaint "
-									change="http://www. 杨俊林的药业公司.cn/liver-complaint">肝病专科</a></li>
-							<li><a href="http://www. 杨俊林的药业公司.cn/skin-problem   http://www. 杨俊林的药业公司.cn/skin-problem "
-									change="http://www. 杨俊林的药业公司.cn/skin-problem">皮肤病</a></li>
+							<li><a href="zhuanke/man.htm">男科</a></li>
+							<li><a href="zhuanke/man.htm">妇科</a></li>
+							<li><a href="zhuanke/man.htm">肝病专科</a></li>
+							<li><a href="zhuanke/man.htm">皮肤病</a></li>
 						</ul>
 					</li>
-					<li><a href="http://www. 杨俊林的药业公司.cn/article/index   http://www. 杨俊林的药业公司.cn/article/index "
-							change="http://www. 杨俊林的药业公司.cn/article/index">健康百科</a></li>
-					<li><a href="http://www. 杨俊林的药业公司.cn/love   http://www. 杨俊林的药业公司.cn/love "
-							change="http://www. 杨俊林的药业公司.cn/love">爱心公益</a></li>
-					<li><a href="http://www. 杨俊林的药业公司.cn/advise   http://www. 杨俊林的药业公司.cn/advise "
-							change="http://www. 杨俊林的药业公司.cn/advise">买不到药专柜</a></li>
+					<li><a href="http://www.39.net/">健康百科</a></li>
+					<li><a href="">爱心公益</a></li>
+					<li><a href="">买不到药专柜</a></li>
 				</ul>
 			</div>
 		</div>
