--- a/cart.htm
+++ b/cart.htm
@@ -148,7 +148,7 @@
 																			<a class="a" href="   //www.baxsun.cn/cart/product/list?id=1697     http://www.baxsun.cn/cart/product/list?id=1697%27" change="http://www.baxsun.cn/cart/product/list?id=1697"><span>安神助眠</span></a>																			<a class="a" href="   //www.baxsun.cn/cart/product/list?id=1698     http://www.baxsun.cn/cart/product/list?id=1698%27" change="http://www.baxsun.cn/cart/product/list?id=1698"><span>躁狂/焦虑</span></a>																			<a class="a" href="   //www.baxsun.cn/cart/product/list?id=1699     http://www.baxsun.cn/cart/product/list?id=1699%27" change="http://www.baxsun.cn/cart/product/list?id=1699"><span>神经病变</span></a>																			<a class="a" href="   //www.baxsun.cn/cart/product/list?id=1700     http://www.baxsun.cn/cart/product/list?id=1700%27" change="http://www.baxsun.cn/cart/product/list?id=1700"><span>精神分裂</span></a>																			<a class="a" href="   //www.baxsun.cn/cart/product/list?id=1701     http://www.baxsun.cn/cart/product/list?id=1701%27" change="http://www.baxsun.cn/cart/product/list?id=1701"><span>帕金森</span></a>																			<a class="a" href="   //www.baxsun.cn/cart/product/list?id=1702     http://www.baxsun.cn/cart/product/list?id=1702%27" change="http://www.baxsun.cn/cart/product/list?id=1702"><span>抑郁</span></a>																			<a class="a" href="   //www.baxsun.cn/cart/product/list?id=1704     http://www.baxsun.cn/cart/product/list?id=1704%27" change="http://www.baxsun.cn/cart/product/list?id=1704"><span>老年痴呆</span></a>																			<a class="a" href="   //www.baxsun.cn/cart/product/list?id=1705     http://www.baxsun.cn/cart/product/list?id=1705%27" change="http://www.baxsun.cn/cart/product/list?id=1705"><span>头痛</span></a>																			<a class="a" href="   //www.baxsun.cn/cart/product/list?id=1706     http://www.baxsun.cn/cart/product/list?id=1706%27" change="http://www.baxsun.cn/cart/product/list?id=1706"><span>癫痫</span></a>																			<a class="a" href="   //www.baxsun.cn/cart/product/list?id=1707     http://www.baxsun.cn/cart/product/list?id=1707%27" change="http://www.baxsun.cn/cart/product/list?id=1707"><span>多动症</span></a>														</dd>
 					</dl>
 															<dl>
-						<dt class="second"><a class="" href="   //www.baxsun.cn/cart/product/list?id=1708     http://www.baxsun.cn/cart/product/list?id=1708%27" change="http://www.baxsun.cn/cart/product/list?id=1708">男科用药</a></dt>
+						<dt class="second"><a class="zhuanke/man.htm" href="">男科用药</a></dt>
 						<dd class="third">
 																			<a class="a" href="   //www.baxsun.cn/cart/product/list?id=1709     http://www.baxsun.cn/cart/product/list?id=1709%27" change="http://www.baxsun.cn/cart/product/list?id=1709"><span>补肾壮阳</span></a>																			<a class="a" href="   //www.baxsun.cn/cart/product/list?id=1710     http://www.baxsun.cn/cart/product/list?id=1710%27" change="http://www.baxsun.cn/cart/product/list?id=1710"><span>滋阴补肾</span></a>																			<a class="a" href="   //www.baxsun.cn/cart/product/list?id=1711     http://www.baxsun.cn/cart/product/list?id=1711%27" change="http://www.baxsun.cn/cart/product/list?id=1711"><span>性功能障碍</span></a>																			<a class="a" href="   //www.baxsun.cn/cart/product/list?id=1712     http://www.baxsun.cn/cart/product/list?id=1712%27" change="http://www.baxsun.cn/cart/product/list?id=1712"><span>前列腺疾病</span></a>																			<a class="a" href="   //www.baxsun.cn/cart/product/list?id=1713     http://www.baxsun.cn/cart/product/list?id=1713%27" change="http://www.baxsun.cn/cart/product/list?id=1713"><span>其它</span></a>														</dd>
 					</dl>
@@ -425,17 +425,17 @@
 
 </div>				</div>
 				<div class="nav-right a333">
-			<ul><li><a href="index.htm" change="http://www.baxsun.cn/">首页</a></li>
-<li><a href="   //www.baxsun.cn/section/index     http://www.baxsun.cn/section/index%27" change="http://www.baxsun.cn/section/index">新特药品</a></li>
-<li><a href="javascript:;">专科频道</a>
+			<ul><li><a href="index.htm" >首页</a></li>
+<li><a href="new/section/new-pro.htm">新特药品</a></li>
+<li><a href="">专科频道</a>
 <ul>
-<li><a href="   //www.baxsun.cn/andrology     http://www.baxsun.cn/andrology%27" change="http://www.baxsun.cn/andrology">男科</a></li>
-<li><a href="   //www.baxsun.cn/gynaecology     http://www.baxsun.cn/gynaecology%27" change="http://www.baxsun.cn/gynaecology">妇科</a></li>
-<li><a href="   //www.baxsun.cn/liver-complaint     http://www.baxsun.cn/liver-complaint%27" change="http://www.baxsun.cn/liver-complaint">肝病专科</a></li>
-<li><a href="   //www.baxsun.cn/skin-problem     http://www.baxsun.cn/skin-problem%27" change="http://www.baxsun.cn/skin-problem">皮肤病</a></li>
+<li><a href="zhuanke/man.htm">男科</a></li>
+<li><a href="zhuanke/man.htm">妇科</a></li>
+<li><a href="zhuanke/man.htm">肝病专科</a></li>
+<li><a href="zhuanke/man.htm">皮肤病</a></li>
 </ul>
 </li>
-<li><a href="   //www.baxsun.cn/article/index     http://www.baxsun.cn/article/index%27" change="http://www.baxsun.cn/article/index">健康百科</a></li>
+<li><a href="http://www.39.net/">健康百科</a></li>
 <li><a href="   //www.baxsun.cn/love     http://www.baxsun.cn/love%27" change="http://www.baxsun.cn/love">爱心公益</a></li>
 <li><a href="   //www.baxsun.cn/advise     http://www.baxsun.cn/advise%27" change="http://www.baxsun.cn/advise">买不到药专柜</a></li></ul>		</div>
 			</div>
